# vanilla_neural_network

./: CMakeLists.txt  Readme.txt  main.cc  stack.h
